Fixed IE8 issues and improved iframe scrollbars

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,12 @@
+html {
+    overflow: hidden;
+}
+
 body {
 	margin: 0 5px 25px 5px;
-	font: 100% normal 'Yanone Kaffeesatz', 'Lucida Grande', 'Trebuchet MS',
-		Verdana, sans-serif;
+	/*font: 100% normal 'Yanone Kaffeesatz', 'Lucida Grande', 'Trebuchet MS',*/
+		/*Verdana, sans-serif;*/
+    font: 100% 'Arial Narrow', sans-serif;
 	text-align: center;
 	color: #999;
 }
@@ -61,6 +66,10 @@ hgroup h1 {
 	border-radius: 5px;
 	color: black;
 	*/
+}
+
+.clear {
+    clear: both;
 }
 
 #attribution {
@@ -126,7 +135,7 @@ hgroup h1 {
 }
 
 .select-label {
-	width: 4em;
+	width: 70px;
 	float: left;
 	text-align: right;
 }
@@ -180,7 +189,7 @@ hgroup h1 {
 }
 
 #main {
-	font-size: 12pt;
+	font-size: 10pt;
 	text-align: left;
 }
 
@@ -343,6 +352,7 @@ div.mapresults {
 	width: 100%;
 	height: 450px;
 	overflow: scroll;
+    overflow-x: hidden;
 	text-align: left;
 	float: right;
 	box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
